fixed issue with blog posts page on smaller devices

--- a/src/App.css
+++ b/src/App.css
@@ -207,7 +207,6 @@
 }
 
 .project-card {
-  min-width: 300px;
   max-width: 1000px;
   height: auto;
   font-family: 'Raleway', sans-serif;
